Fix for defect introduced in "high contrast" fixes -- link styled as ds_button has incorrect outline on hover

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -36,6 +36,7 @@ $link__border-width: 3px;
     &:hover {
         background-color: $ds_colour__button--hover__background;
         color: $ds_colour__button;
+        outline-color: transparent;
         transition-duration: $transition-in-time;
     }
 
